...
import fr.forumhfr.redface2.core.ui.RedfaceTheme
import fr.forumhfr.redface2.core.ui.post.postHeaderColors
import fr.forumhfr.redface2.core.ui.post.readingContentColors
import fr.forumhfr.redface2.core.ui.theme.FlagPalette

internal const val SETTINGS_COLOR_PREVIEW_TAG = "settings_color_preview"
internal const val SETTINGS_COLOR_PREVIEW_POST_TAG = "settings_color_preview_post"
internal const val SETTINGS_COLOR_PREVIEW_HEADER_TAG = "settings_color_preview_header"
internal const val SETTINGS_COLOR_PREVIEW_QUOTE_TAG = "settings_color_preview_quote"
internal const val SETTINGS_COLOR_PREVIEW_SPOILER_TAG = "settings_color_preview_spoiler"
internal val SettingsColorPreviewPostContainerColorKey = SemanticsPropertyKey<Color>(
    "SettingsColorPreviewPostContainerColor",
)
internal val SettingsColorPreviewHeaderContainerColorKey = SemanticsPropertyKey<Color>(
    "SettingsColorPreviewHeaderContainerColor",
)
...
